--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
                 </a>
 
                 <!-- 2D Kinematics Card -->
-                <div class="simulation-card block bg-gradient-to-br from-gray-50 to-gray-100 rounded-lg p-6 border-2 border-gray-300 opacity-60 cursor-not-allowed">
+                <a href="2d-kinematics.html" class="simulation-card block bg-gradient-to-br from-purple-50 to-pink-50 rounded-lg p-6 border-2 border-purple-200 hover:border-purple-400">
                     <div class="flex items-start justify-between mb-3">
-                        <h3 class="text-xl font-bold text-gray-700">2D Kinematics</h3>
-                        <span class="bg-gray-400 text-white text-xs font-semibold px-3 py-1 rounded-full">Coming Soon</span>
+                        <h3 class="text-xl font-bold text-purple-900">2D Kinematics</h3>
+                        <span class="bg-purple-600 text-white text-xs font-semibold px-3 py-1 rounded-full">Available</span>
                     </div>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-700 mb-4">
                         Visualize motion in two dimensions with vector decomposition. Explore how x and y 
-                        components evolve independently over time.
+                        components evolve independently over time with projectiles, orbits, and more.
                     </p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="text-xs bg-white px-2 py-1 rounded text-gray-600 font-medium">2D Vectors</span>
-                        <span class="text-xs bg-white px-2 py-1 rounded text-gray-600 font-medium">Components</span>
-                        <span class="text-xs bg-white px-2 py-1 rounded text-gray-600 font-medium">Trajectories</span>
+                        <span class="text-xs bg-white px-2 py-1 rounded text-purple-700 font-medium">2D Vectors</span>
+                        <span class="text-xs bg-white px-2 py-1 rounded text-pink-700 font-medium">Components</span>
+                        <span class="text-xs bg-white px-2 py-1 rounded text-indigo-700 font-medium">Trajectories</span>
                     </div>
-                </div>
+                </a>
 
                 <!-- Projectile Motion Card -->
                 <div class="simulation-card block bg-gradient-to-br from-gray-50 to-gray-100 rounded-lg p-6 border-2 border-gray-300 opacity-60 cursor-not-allowed">
@@ -139,6 +139,10 @@
                             <span class="text-indigo-600 mr-2">•</span>
                             <span>Develop intuition for derivatives and integrals in physical context</span>
                         </li>
+                        <li class="flex items-start">
+                            <span class="text-indigo-600 mr-2">•</span>
+                            <span>Visualize vector decomposition in 2D motion</span>
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -155,6 +159,10 @@
                         <li class="flex items-start">
                             <span class="text-indigo-600 mr-2">•</span>
                             <span>Analyze vector components in two-dimensional motion</span>
+                        </li>
+                        <li class="flex items-start">
+                            <span class="text-indigo-600 mr-2">•</span>
+                            <span>Understand independence of x and y motion in 2D kinematics</span>
                         </li>
                     </ul>
                 </div>
